--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -203,7 +203,7 @@
     <ClCompile Include="NewEngine\Collision\Collision.cpp" />
     <ClCompile Include="NewEngine\Collision\Grass.cpp" />
     <ClCompile Include="NewEngine\Collision\ICollider.cpp" />
-    <ClCompile Include="NewEngine\Collision\SkyIsland.cpp" />
+    <ClCompile Include="Application\SourceCode\Field\SkyIsland.cpp" />
     <ClCompile Include="NewEngine\Debugger\DebugManager.cpp" />
     <ClCompile Include="NewEngine\Gui\GuiManager.cpp" />
     <ClCompile Include="NewEngine\Input\InputManager.cpp" />
@@ -369,7 +369,7 @@
     <ClInclude Include="NewEngine\Collision\Collision.h" />
     <ClInclude Include="NewEngine\Collision\Grass.h" />
     <ClInclude Include="NewEngine\Collision\ICollider.h" />
-    <ClInclude Include="NewEngine\Collision\SkyIsland.h" />
+    <ClInclude Include="Application\SourceCode\Field\SkyIsland.h" />
     <ClInclude Include="NewEngine\Debugger\DebugManager.h" />
     <ClInclude Include="NewEngine\Gui\GuiManager.h" />
     <ClInclude Include="NewEngine\Input\InputManager.h" />
